--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "private": false,
   "version": "0.0.0",
   "type": "module",
+  "scripts": {
+    "dev": "vite --open --host",
+    "build": "vite build --mode production",
+    "preview": "pnpm build && vite preview --open --host"
+  },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-label": "^2.1.7",
@@ -14,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
     "js-yaml": "^4.1.0",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.540.0",
@@ -43,9 +50,5 @@
     "pnpm": ">=10",
     "node": ">=18"
   },
-  "scripts": {
-    "dev": "vite --open --host",
-    "build": "vite build --mode production",
-    "preview": "pnpm build && vite preview --open --host"
-  }
+  "packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
 }
